--- a/FAS_Project/src/main/resources/application.properties
+++ b/FAS_Project/src/main/resources/application.properties
@@ -6,11 +6,15 @@ management.port=5051
 
 # Oracle Datasource Properties
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=scott
-spring.datasource.password=tiger
+spring.datasource.username=suraj
+spring.datasource.password=bhandari
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 # Spring JPA Properties
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+# Redis Properties
+spring.redis.host=localhost
+spring.redis.port=6379
