updated the db properties

--- a/FAS_Project/src/main/resources/application.properties
+++ b/FAS_Project/src/main/resources/application.properties
@@ -6,8 +6,8 @@ management.port=5051
 
 # Oracle Datasource Properties
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=suraj
-spring.datasource.password=bhandari
+spring.datasource.username=username
+spring.datasource.password=secret
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 # Spring JPA Properties
